--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,75 +1,41 @@
-- title: Start
+- title: Home
   url: "/"
-  side: left
+  side: right
 
-- title: Getting Started
-  url: "/getting-started/"
-  side: left
+- title: About
+  url: "/about/"
+  side: right
 
-- title: "Templates"
-  url: "/design/"
-  side: left
+- title: "CV"
+  url: "/cv/"
+  side: right
+
+- title: "Projects"
+  url: "/projects/"
+  side: right
   dropdown:
-  - title: "Grid & Colors"
-    url: "/design/grid/"
-  - title: "Typography"
-    url: "/design/typography/typography/"
-  - title: "Page/Post"
-    url: "/design/page/"
-  - title: "Post-Left-Sidebar"
-    url: "/design/post-left-sidebar/"
-  - title: "Post-Right-Sidebar"
-    url: "/design/post-right-sidebar/"
-  - title: "Page Full-Width"
-    url: "/design/page-fullwidth/"
-  - title: "Blog-Page"
-    url: "/blog/"
-  - title: "Video"
-    url: "/design/video/"
-  - title: "Gallery"
-    url: "/design/gallery/"
-  - title: "Portfolio"
-    url: "/design/portfolio/"
-
-- title: "Header Styles"
-  url: "/headers/"
-  side: left
-  dropdown:
-  - title: "Header with Full-Width-Image"
-    url: "/design/header-full-width-image/"
-  - title: "Header with Image and Pattern"
-    url: "/design/header-image-pattern/"
-  - title: "Header with image and color"
-    url: "/design/header-image-color/"
-  - title: "Header Only With Logo"
-    url: "/design/header-logo-only/"
-  - title: "Header With Text"
-    url: "/design/header-with-text/"
-  - title: "No Header"
-    url: "/design/no-header/"
-  - title: "No Header but Image"
-    url: "/design/no-header-but-image/"
-
-- title: Documentation
-  url: "/documentation/"
-  side: left
-  dropdown:
-  - title: "Changelog"
-    url: "/changelog/"
-  - title: "Roadmap"
-    url: "/roadmap/"
+  - title: "Palmer LTER"
+    url: "/projects/palmer_lter/"
+  - title: "Subsurface eddies"
+    url: "/projects/subsurface_eddies/"
+  - title: "Antarctic Peninsula shelf currents"
+    url: "/projects/antarctic_peninsula_shelf_currents/"
+  - title: "Bering Strait turbulence"
+    url: "/projects/bering_strait_turbulence/"
 
 - title: Blog
   url: "/blog/"
-  side: left
+  side: right
   dropdown:
-  - title: "Blog Archive"
-    url: "/blog/archive/"
+  - title: "Research blog"
+    url: "/blog/research/"
+  - title: "oceanbites.org"
+    url: "/blog/oceanbites/"
 
-- title: "Search"
-  url: "/search/"
-  side: right
-
-- title: "Contact"
-  url: "/contact/"
-  side: right
+#- title: "Search"
+#  url: "/search/"
+#  side: right
+#
+#- title: "Contact"
+#  url: "/contact/"
+#  side: right
