--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,21 +1,21 @@
-- menu_name: "Dankeschön"
+- menu_name: "Links"
 
-- name: "Icons by Daniel Bruce"
-  url: "http://entypo.com/"
-  class: "network-entypo"
-  title: "Icons by Daniel Bruce"
-
-- name: "Built on Foundation"
-  url: "http://foundation.zurb.com/"
-  class: "services-newsletter"
-  title: "Built on Foundation"
-
-- name: "Images by Unsplash"
-  url: "http://unsplash.com/"
-  class: "rss-link"
-  title: "Images by Unsplash"
-
-- name: "Using Backstretch by Scott Robbin"
-  url: "http://srobbin.com/jquery-plugins/backstretch/"
+- name: "Multiscale Ocean Dynamics"
+  url: "www.mod.ucsd.edu"
   class: "sitemap-link"
-  title: "Using Backstretch by Scott Robbin"
+  title: "Multiscale Ocean Dynamics"
+
+- name: "Palmer LTER"
+  url: "http://pal.lternet.edu/"
+  class: "sitemap-link"
+  title: "Palmer LTER"
+
+- name: "Oceanbites"
+  url: "https://oceanbites.org/"
+  class: "sitemap-link"
+  title: "Oceanbites"
+
+#- name: "Using Backstretch by Scott Robbin"
+#  url: "http://srobbin.com/jquery-plugins/backstretch/"
+#  class: "sitemap-link"
+#  title: "Using Backstretch by Scott Robbin"
