--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ improve_content:
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'images/'
+urlimg: 'http://nicolecouto.github.io/images/'
 
 
 # Logo size is 600x80 pixels
-logo: "nature.png"
+logo: "logo_nicolecouto.png"
 
 # Gems
 gems:
