--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,7 +1,7 @@
 - name: GitHub
   url: http://github.com/nicolecouto
   class: icon-github
-  title: Code und mehr...
+  title: GitHub
 
 - name: Google Scholar
   url: https://scholar.google.com/citations?user=YiYByx0AAAAJ&hl=en
