--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: 'I am a postdoctoral scholar in the Multiscale Ocean Dynamics Group
 
 email: ncouto (at) ucsd (dot) edu
 
-office: Marine Physical Laboratory - Keck / OAR 213
+office: Marine Physical Laboratory - Keck / OAR 213'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
 credits: '<p>Created with &hearts; by <a href="http://phlow.de/">Phlow</a> with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
