--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ title: 'Nicole Couto'
 slogan: 'Polar Physical Oceanographer'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: 'I am a postdoctoral scholar in the Multiscale Ocean Dynamics Group at Scripps Institution of Oceanography.
+description: 'I am a postdoctoral scholar in the Multiscale Ocean Dynamics Group at Scripps Institution of Oceanography.\n
 
-email: ncouto (at) ucsd (dot) edu
+email: ncouto (at) ucsd (dot) edu\n
 
 office: Marine Physical Laboratory - Keck / OAR 213'
 
