--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ urlimg: 'http://nicolecouto.github.io/images/'
 
 
 # Logo size is 600x80 pixels
-logo: "logo_nicolecouto.png"
+logo: "logo_nc.png"
 
 # Gems
 gems:
