--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ title: 'Nicole Couto'
 slogan: 'Polar Physical Oceanographer'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description:
-- |
-'I am a postdoctoral scholar in the Multiscale Ocean Dynamics Group at Scripps Institution of Oceanography.
+description: 'I am a postdoctoral scholar in the Multiscale Ocean Dynamics Group at Scripps Institution of Oceanography.
+<br></br>
 email: ncouto (at) ucsd (dot) edu
+<br></br>
 office: Marine Physical Laboratory - Keck / OAR 213'
 
 
