remove about page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,9 @@
   url: "/"
   side: right
 
-- title: About
-  url: "/about/"
-  side: right
+#- title: About
+#  url: "/about/"
+#  side: right
 
 - title: "CV"
   url: "/cv/"
